tests/MiddleEnd/Input/CodeGen/Invalid/MultipleVariableDefinition.wl
// Error at line 4, column 5: Variable `var` already declared
int main() {
    int var = 100;
    int var = 200;
    return 0;
}